--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -33,4 +33,8 @@
     <Folder Include="AdminRole\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoFactory" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
