--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -20,6 +20,15 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="User Role\userProfielPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="User Role\CartItemPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="User Role\OrderPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
