--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -20,6 +20,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="User Role\ProductDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="User Role\userProfielPanel.cs">
       <SubType>Form</SubType>
     </Compile>
